[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/player/Guide.gd" type="Script" id=1]
[ext_resource path="res://sprites/npc/wizzard_f_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://sprites/npc/wizzard_f_idle_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://sprites/npc/wizzard_f_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://sprites/npc/wizzard_f_idle_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://sprites/npc/ogre_idle_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://sprites/npc/ogre_idle_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://sprites/npc/ogre_idle_anim_f2.png" type="Texture" id=8]
[ext_resource path="res://sprites/npc/ogre_idle_anim_f3.png" type="Texture" id=9]
[ext_resource path="res://scenes/player/SpeachBubble.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/items/Item__63.png" type="Texture" id=11]
[ext_resource path="res://scenes/player/DisplayItem.gd" type="Script" id=12]
[ext_resource path="res://audio/effects/magic.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Wizzard",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Orc",
"speed": 12.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "Morph"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "become_wizzard"
} ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.75153, 10 )

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -10.0, 10.0, -10.0 ]
}

[node name="Guide" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Orc"
playing = true
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Morph = SubResource( 2 )

[node name="SpeachBubble" parent="." instance=ExtResource( 10 )]
position = Vector2( -67.8053, -22.2514 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DisplayItem" type="Sprite" parent="."]
position = Vector2( -27, -7 )
rotation = 0.103245
texture = ExtResource( 11 )
script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DisplayItem"]
root_node = NodePath(".")
anims/ShakeGloves = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
